###############################################################################
##
## CMakeLists file for ZDT/test
##
###############################################################################


######################################################################################
### 1) Include the sources
######################################################################################

include_directories(${PARADISEO_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src)

######################################################################################


######################################################################################
### 3) Define your targets and link the librairies
######################################################################################

set(TEST_LIST
	t-ZDT
	t-ZDT1Eval
	t-ZDT2Eval
)

foreach (test ${TEST_LIST})
    set("T_${test}_SOURCES" "${test}.cpp")
    add_executable(${test} ${T_${test}_SOURCES}) 
    add_test(${test} ${test}) 
    target_link_libraries(${test} ${PARADISEO_LIBRARIES} lZDT)
endforeach (test)
	
######################################################################################

